[gd_scene load_steps=7 format=3 uid="uid://c33evqngls3kj"]

[ext_resource type="Script" path="res://Swan.gd" id="1_npgk3"]
[ext_resource type="Texture2D" uid="uid://bm05kbhxs1rou" path="res://art/swan.jpg" id="1_u5pxq"]
[ext_resource type="Texture2D" uid="uid://b1npjf0h2t56" path="res://art/explode.png" id="3_7ke0n"]
[ext_resource type="Texture2D" uid="uid://3d4wk71q7p8s" path="res://art/god_yoshi.jpg" id="4_erd5w"]

[sub_resource type="CircleShape2D" id="CircleShape2D_gqhue"]
radius = 137.004

[sub_resource type="SpriteFrames" id="SpriteFrames_8lhqn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_u5pxq")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_u5pxq")
}, {
"duration": 1.0,
"texture": ExtResource("3_7ke0n")
}, {
"duration": 1.0,
"texture": ExtResource("4_erd5w")
}],
"loop": true,
"name": &"hit_animation",
"speed": 2.0
}]

[node name="Swan" type="RigidBody2D"]
mass = 91.0
gravity_scale = 0.0
lock_rotation = true
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("1_npgk3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(487, 110.5)
shape = SubResource("CircleShape2D_gqhue")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(488, 113.5)
sprite_frames = SubResource("SpriteFrames_8lhqn")
animation = &"hit_animation"
frame_progress = 0.243078

[node name="BeadTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="HonkTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="body_shape_entered" from="." to="." method="_on_body_shape_entered"]
[connection signal="timeout" from="BeadTimer" to="." method="_on_bead_timer_timeout"]
[connection signal="timeout" from="HonkTimer" to="." method="_on_honk_timer_timeout"]
